# drf_project

./: .env.sample  Dockerfile  README.md  coverage.txt  docker-compose.yaml   docker-compose.yml  groups.json  pyproject.toml  users_data.json
config/: settings.py  urls.py
course/: admin.py  models.py  serializers.py  tasks.py  tests.py  urls.py  validators.py  views.py
course/migrations/: 0001_initial.py  0002_course_owner_lesson_owner.py  0003_alter_lesson_video.py  0004_subscription.py
payments/: models.py  serializers.py  services.py  urls.py  views.py
payments/migrations/: 0001_initial.py  0002_payments_link_payments_session_id.py
users/: models.py  permissions.py  serializers.py  tasks.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_payments.py  0003_alter_payments_payment_method.py  0004_delete_payments.py  0005_alter_user_last_login.py
