[tool.poetry]
name = "drf-python-project"
version = "0.1.0"
description = ""
authors = ["Vladimir Khapaev <khapaev@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "4.2.2"
djangorestframework = "^3.15.2"
python-dotenv = "^1.0.1"
psycopg2-binary = "^2.9.9"
pillow = "^10.4.0"
black = "^24.8.0"
isort = "^5.13.2"
django-filter = "^24.3"
djangorestframework-simplejwt = "^5.3.1"
ipython = "^8.28.0"
coverage = "^7.6.2"
stripe = "^11.1.0"
celery = "^5.4.0"
redis = "^5.1.1"
django-celery-beat = "^2.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
